--- a/flights/templates/flights/flight.html
+++ b/flights/templates/flights/flight.html
@@ -7,4 +7,29 @@
         <li>Destination: {{flight.destination}}</li>
         <li>Duration: {{flight.duration}}</li>
     </ul>
+    <h2>Flight {{flight.id}}</h2>
+    <ul>
+        {%for passenger in passengers%}
+            <li>{{passenger}}</li>
+        {%empty%}
+            <li>No Passengers</li>
+            <li></li>
+        {%endfor%}
+    </ul>
+
+    <h2>Add Passenger</h2>
+    <form action="{% url 'flights:book' flight.id%}" method="POST">
+        {%csrf_token%}
+        <select name="passenger">
+            {%for passenger in non_passengers%}
+                <option value="{{passenger.id}}">{{passenger}}</option>
+            {%endfor%}
+        </select>
+        <input type="submit">
+    </form>
+
+
+    <a href="{%url 'flights:index'%}">Back to flight list</a>
+
+
 {%endblock%}
