Register page created and. View and urls files aupdated

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,4 +11,5 @@
         <input type="submit" value="Login">
 
     </form>
+    <p>Need an account. Please <a href="{%url 'register'%}">Register</a></p>
 {%endblock%}
